@@ -1,3 +1,6 @@
+* important changes in version 1.70 15/11/2010
+- Add ptargrep utility courtesy of Grant McLean
+
 * important changes in version 1.68 17/08/2010
 - Apply a patch from Colin Newell that checks whether long files can be created or
   not in 02_methods.t. Hopefully resolves RT #57312 and RT #56163
